--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "@tailwindcss/forms": "^0.5.6"
+        "@headlessui/vue": "^1.7.16",
+        "@heroicons/vue": "^2.0.18",
+        "@tailwindcss/forms": "^0.5.6",
+        "@unhead/vue": "^1.8.1",
+        "@vitejs/plugin-vue": "^4.4.0",
+        "flowbite": "^2.0.0",
+        "vue": "^3.2.36",
+        "vue-recaptcha": "^3.0.0-alpha.2",
+        "vue-router": "^4.2.5"
     }
 }
